# ZeroTrace

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_all_graders.py  test_binary.py  test_clamp.py  test_score_clamp.py
agent/: __init__.py  prompt_builder.py  tools.py  zerotrace_agent.py
environment/: __init__.py  env.py  models.py  sandbox.py  state_machine.py  test_runner.py
leaderboard/: __init__.py  replay.py  store.py
leaderboard/data/: leaderboard.json
leaderboard/data/replays/: level1_keyerror_20260401_183937.json  level1_keyerror_20260401_185430.json  level1_keyerror_20260402_094324.json  level1_keyerror_20260402_110057.json  level2_resource_leak_20260401_184021.json  level2_resource_leak_20260401_185518.json  level2_resource_leak_20260402_094412.json  level2_resource_leak_20260402_110150.json  level3_race_condition_20260401_184119.json  level3_race_condition_20260401_190404.json  level3_race_condition_20260402_094512.json
reports/: __init__.py  exporter.py
security/: __init__.py  scanner.py
server/: __init__.py  app.py
tasks/: __init__.py  level1.py  level2.py  level3.py  torch_ddp.py  torch_dtype.py  torch_nan_grad.py  torch_wrong_dim.py
